--- a/machines/dardel24.11_ubuntu24.04_mpich_rocm.yaml
+++ b/machines/dardel24.11_ubuntu24.04_mpich_rocm.yaml
@@ -15,6 +15,9 @@ environment_vars:
 install_vars:
   install_prefix: '/opt/software'
   rocm_arch: 'gfx90a'
+  build_flags_c: "-O3 -march=znver3 -mtune=znver3 -mfma -mavx2"
+  build_flags_f: "-O3 -march=znver3 -mtune=znver3 -mfma -mavx2"
+  build_flags_cxx: "-O3 -march=znver3 -mtune=znver3 -mfma -mavx2"
   
 
 # Software modules to install
@@ -37,9 +40,11 @@ modules:
   - name: openblas
     version: '0.3.30'
     enabled: true
+    install_vars:
+      openblas_target: 'ZEN'
 
   - name: scalapack
-    version: '2.2.0'
+    version: '2.2.2'
     enabled: true
   
   - name: fftw
@@ -50,13 +55,21 @@ modules:
     version: '7.0.0'
     enabled: true
   
-  - name: cupy
+  - name: libvdwxc
+    version: '0.5.0'
+    enabled: true
+
+  - name: cupy_rocm
     version: '13.6.0'
     enabled: true
 
-
-#  - name: gpaw
-#    version: '25.7.0'
-#    enabled: true
-
-
+  - name: abtem
+    version: 'git'
+    enabled: true
+  
+  - name: gpaw
+    version: '25.7.0'
+    enabled: true
+  
+  - name: python-packages
+    enabled: true
