More GPAW polish. First full version compiling both cluster and default 	machines.

--- a/machines/dardel24.11_ubuntu24.04_mpich_rocm.yaml
+++ b/machines/dardel24.11_ubuntu24.04_mpich_rocm.yaml
@@ -77,4 +77,7 @@ modules:
     enabled: true
   
   - name: python-packages
-    enabled: false
+    enabled: true
+  
+  - name: cleanup
+    enabled: true
